# Web_HW_8

./: config.txt  pyproject.toml
part_1/: authors.json  connect_db.py  load_json.py  main.py  redis_cache.py  t.py  work_speed.py
part_2/: config.ini  connect_rabbitMQ.py  consumer_email.py  consumer_sms.py  main.py  models.py  mytasks.py  producer.py  worker_email.py  worker_sms.py
web_hw_8/: main.py  pyproject.toml
web_hw_8/web_hw_8/: connect_db.py  load_json.py  models.py
